--- a/lion-console/src/main/webapp/css/lion.css
+++ b/lion-console/src/main/webapp/css/lion.css
@@ -53,6 +53,27 @@ body {
 	margin-top: 2px;
 }
 
+.tooltip-inner {
+	max-width : 400px;
+	table-layout:fixed;
+	word-break: break-all;
+	overflow:hidden;
+}
+
+.form-alert {
+	border-style: solid;
+	border-width: 1px;
+  	-webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.alert-warn {
+  color: #C09853;
+  background-color: #FCF8E3;
+  border-color: #FBEED5;
+}
+
 .form-actions {
 	padding-top : 7px !important;
 	padding-bottom : 8px !important;
@@ -209,10 +230,6 @@ table.lion input[type="radio"], input[type="checkbox"] {
 	}
 }
 
-/*==============extend jquery ui===============*/
-.ui-widget-header {
-	background : whiteSmoke;
-}
 
 /*==============extend jquery dialog===============*/
 .ui-dialog .ui-dialog-buttonpane button {
