--- a/lion-console/src/main/webapp/css/lion.css
+++ b/lion-console/src/main/webapp/css/lion.css
@@ -202,6 +202,16 @@ table.lion input[type="radio"], input[type="checkbox"] {
 	margin : 0 0;
 }
 
+.lion-h3 {
+	margin: 0;
+	font-family: inherit;
+	font-weight: bold;
+	color: inherit;
+	text-rendering: optimizelegibility;
+	font-size: 18px;
+	line-height: 27px;
+}
+
 .nohover tbody tr:hover td,
 .nohover tbody tr:hover th {
   background-color: white !important;
