修改配置的编辑UI

--- a/lion-console/src/main/webapp/css/lion.css
+++ b/lion-console/src/main/webapp/css/lion.css
@@ -251,6 +251,11 @@ a.no-dec {
 	margin-left : 120px;
 }
 
+.form-horizontal .lion-controls2 {
+	margin-left : 120px;
+	padding-top : 4px;
+}
+
 .pagination {
 	margin : 0 0;
 }
