添加功能权限的实现

--- a/lion-console/src/main/webapp/css/bootstrap.css
+++ b/lion-console/src/main/webapp/css/bootstrap.css
@@ -3793,7 +3793,7 @@ input[type="submit"].btn.btn-mini {
   float: none;
   padding: 9px 10px 11px;
   line-height: 19px;
-  color: #999999;
+  color: #CCCCCC;
   text-decoration: none;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
